# AgentReview

./: .gitignore  README.md  main.py  pyproject.toml  test_agents.py  test_rag.py
deploy/: Dockerfile  docker-compose.yml  railway.toml
src/agents/: base.py  orchestrator.py  prompts.py
src/api/: main.py
src/core/: config.py  logging.py  storage.py
src/github/: client.py  parser.py
src/rag/: chunker.py  embedder.py  vector_store.py
src/ui/: dashboard.py
