[project]
name = "agentreview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "chromadb>=1.5.5",
    "fastapi>=0.135.2",
    "gitpython>=3.1.46",
    "groq>=1.1.2",
    "httpx>=0.28.1",
    "langchain-core>=1.2.22",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pygithub>=2.9.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.8",
    "sentence-transformers>=5.3.0",
    "sqlalchemy>=2.0.48",
    "streamlit>=1.55.0",
    "uvicorn[standard]>=0.42.0",
    "wandb>=0.25.1",
]
